--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "build:analyze": "ANALYZE=true next build",
     "lighthouse": "lhci autorun",
     "performance": "next build && next export",
-    "generate-favicons": "node generate-favicons.js"
+    "generate-favicons": "node generate-favicons.js",
+    "send-followups": "node send-followup-emails.js"
   },
   "dependencies": {
     "@radix-ui/react-scroll-area": "^1.2.10",
+    "critters": "^0.0.23",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "resend": "^6.6.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
